[package]
name = "grid_pursuit"
version = "0.1.0"
edition = "2021"

[dependencies]
fixedbitset = "0.4.1"
array-init = "2.0.0"
itertools = "0.10.3"
arrayvec = "0.7.2"
thiserror = "1.0.30"
smart-default = "0.6.0"
derive-new = "0.5"
enumset = "1.0.11"
derive_more = "0.99.16"
slice-group-by = "0.3.0"
num = "0.4.0"
