[package]
name = "mkbsc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-set = "0.5.2"
fixedbitset = "0.4.1"
array-init = "2.0.0"
itertools = "0.10.3"
arrayvec = "0.7.2"
anyhow = "1.0.57"
thiserror = "1.0.30"
smart-default = "0.6.0"
derive-new = "0.5"
enumset = "1.0.11"
derive_more = "0.99.16"
slice-group-by = "0.3.0"
once_cell = "1.10.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
weak-table = "0.3.2"
disjoint-sets = "0.4.2"
paste = "1.0.7"
indexmap = "1.8.1"
clap = { version = "3.1.12", features = ["cargo"] }
enum_dispatch = "0.3.8"
lazy_format = "1.10.0"
vec_map = "0.8.2"
debug-rs = "0.1.3"
indoc = "1.0.6"
num = "0.4.0"
