[package]
name = "mkbsc-rs"
version = "0.1.0"
authors = ["Alfred Andersson <alfred@rygno.net>"]
description = "An implementation of the MKBSC and strategy synthesis for multi-agent games of imperfect information."
repository = "https://github.com/AlfredAn/mkbsc-rs"
edition = "2021"

[dependencies]
bit-set = "0.5.2"
fixedbitset = "0.4.1"
array-init = "2.0.0"
itertools = "0.10.3"
arrayvec = "0.7.2"
anyhow = "1.0.57"
smart-default = "0.6.0"
derive-new = "0.5"
derive_more = "0.99.16"
slice-group-by = "0.3.0"
once_cell = "1.10.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
weak-table = "0.3.2"
disjoint-sets = "0.4.2"
paste = "1.0.7"
clap = { version = "3.1.12", features = ["derive"] }
enum_dispatch = "0.3.8"
vec_map = "0.8.2"
indoc = "1.0.6"
rustc-hash = "1.1.0"
tabbycat = "0.1.3"
